--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -22,4 +22,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':library')
+    compile 'com.melnykov:floatingactionbutton:1.0.4'
 }
