--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -22,5 +22,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':library')
-    compile 'com.melnykov:floatingactionbutton:1.0.4'
+    compile 'com.android.support:palette-v7:21.0.0'
+    compile 'com.android.support:recyclerview-v7:21.0.0'
+    compile 'com.android.support:support-v4:21.0.0'
+    compile 'com.squareup.picasso:picasso:2.3.2'
 }
