--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.0.0-rc4'
+        classpath 'com.android.tools.build:gradle:1.0.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -14,9 +14,10 @@ buildscript {
 
 allprojects {
 
-    version = VERSION_NAME
-    group = GROUP
-
+    if (hasProperty("VERSION_NAME")) {
+        version = VERSION_NAME
+        group = GROUP
+    }
     repositories {
         jcenter()
     }
