--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -23,10 +23,10 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':library')
-    compile 'com.android.support:appcompat-v7:22.1.1'
+    compile 'com.github.traex.rippleeffect:library:1.3'
+    compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.android.support:palette-v7:22.0.0'
     compile 'com.android.support:recyclerview-v7:22.0.0'
-    compile 'com.android.support:support-v4:22.1.1'
+    compile 'com.android.support:support-v4:22.0.0'
     compile 'com.squareup.picasso:picasso:2.5.1'
 }
